v0.14.0/_sources/projections/misc/misc_hammer.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_hammer.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_misc_misc_hammer.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_hammer.py:


Hammer projection
=================

The equal-area Hammer projection, first presented by the German mathematician
Ernst von Hammer in 1892, is also known as Hammer-Aitoff (the Aitoff projection
looks similar, but is not equal-area). The border is an ellipse, equator and
central meridian are straight lines, while other parallels and meridians are
complex curves.

**h**\ [*lon0/*]\ *scale* or **H**\ [*lon0/*]\ *width*

The projection is set with **h** or **H**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 18-24



.. image-sg:: /projections/misc/images/sphx_glr_misc_hammer_001.png
   :alt: misc hammer
   :srcset: /projections/misc/images/sphx_glr_misc_hammer_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="H12c", frame="afg", land="ivory", water="bisque4")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.210 seconds)


.. _sphx_glr_download_projections_misc_misc_hammer.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: misc_hammer.ipynb <misc_hammer.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: misc_hammer.py <misc_hammer.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: misc_hammer.zip <misc_hammer.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
